
[TestListCmd_Execute_All - 1]
✔ Listing all clusters (stub implementation)
► Distribution filter: Kind

---

[TestListCmd_Execute_Default - 1]
✔ Listing running clusters (stub implementation)
► Distribution filter: Kind

---

[TestListCmd_Help - 1]
List all Kubernetes clusters managed by KSail.

Usage:
  list [flags]

Flags:
      --all                         List all clusters including stopped ones
  -d, --distribution Distribution   Kubernetes distribution to list clusters for (default Kind)
  -h, --help                        help for list

---
